update to moderation actions

--- a/todo
+++ b/todo
@@ -1,7 +1,11 @@
-kick
-ban
-warn
++ kick
++ ban
++ mute
+
+- warn
 hello message
 captcha system
 raid protection?
 pin for some time
+
+history of banned users
